fix logo width on mobile

--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -22,3 +22,9 @@
 #header-side {
     float: right;
 }
+
+@media (min-width: $breakpoint) {
+    .brand-link img {
+        max-width: 40%;
+    }
+}
