--- a/css/kub.scss
+++ b/css/kub.scss
@@ -25,7 +25,3 @@ html {
 body {
     margin: 1em auto 2em;
 }
-
-.brand-link img {
-    max-width: 40%;
-}
